--- a/project_view.html
+++ b/project_view.html
@@ -12,7 +12,6 @@
         label { font-size: 9px; color: #555; font-weight: bold; margin-bottom: 1px; }
         input { border: 1px solid #bbb; padding: 2px; font-size: 12px; height: 20px; }
         input:focus { border-color: #007bff; background: #fffde7; outline: none; }
-        /* تصغير خانات محددة */
         .w-small { grid-column: span 1; }
         .w-med { grid-column: span 2; }
         .actions { margin: 5px 0; display: flex; gap: 4px; flex-wrap: wrap; }
@@ -28,8 +27,11 @@
 <body>
 
 <div class="project-bar">
-    <div><strong>الفهرس الليبي الموحد</strong> | المشروع: <span id="activeProject">افتراضي</span></div>
-    <button onclick="switchProject()" style="font-size: 9px; padding: 2px 8px;">تبديل المشروع</button>
+    <div>
+        <strong>الفهرس الليبي الموحد</strong> | المشروع: <span id="activeProject" style="color:#ffc107"></span>
+        <select id="projectSelector" onchange="loadProject(this.value)" style="margin-right:10px; font-size:10px;"></select>
+    </div>
+    <button onclick="createNewProject()" style="font-size: 9px; padding: 2px 8px;">+ مشروع جديد</button>
 </div>
 
 <form id="biblioForm" class="compact-grid">
@@ -59,7 +61,7 @@
     <button class="btn btn-excel" onclick="exportTemplate()">تصدير قالب Excel</button>
     <button class="btn btn-excel" style="background:#6f42c1" onclick="document.getElementById('importFile').click()">استيراد Excel</button>
     <input type="file" id="importFile" style="display:none" onchange="importFromExcel(event)">
-    <button class="btn btn-word" onclick="previewFullList()">القائمة الببليوغرافية</button>
+    <button class="btn btn-word" onclick="previewFullList()">معاينة القائمة (Word)</button>
     <button class="btn btn-word" style="background:#555" onclick="previewIndex('author')">كشاف المؤلفين</button>
     <button class="btn btn-word" style="background:#555" onclick="previewIndex('title')">كشاف العناوين</button>
     <button class="btn btn-word" style="background:#d94a38" onclick="previewIndex('orig_author')">كشاف المؤلف الأصلي</button>
@@ -74,15 +76,29 @@
 </table>
 
 <script>
+let projects = JSON.parse(localStorage.getItem('all_project_names')) || ['default'];
 let currentProj = localStorage.getItem('biblio_active_proj') || 'default';
 let records = JSON.parse(localStorage.getItem('records_' + currentProj)) || [];
 let editIdx = -1;
 
-document.getElementById('activeProject').innerText = currentProj;
+function updateProjectList() {
+    const sel = document.getElementById('projectSelector');
+    sel.innerHTML = projects.map(p => `<option value="${p}" ${p === currentProj ? 'selected' : ''}>${p}</option>`).join('');
+    document.getElementById('activeProject').innerText = currentProj;
+}
 
-function switchProject() {
-    let p = prompt("اسم المشروع:", currentProj);
-    if(p) { localStorage.setItem('biblio_active_proj', p); location.reload(); }
+function createNewProject() {
+    let p = prompt("اسم المشروع الجديد:");
+    if(p && !projects.includes(p)) {
+        projects.push(p);
+        localStorage.setItem('all_project_names', JSON.stringify(projects));
+        loadProject(p);
+    }
+}
+
+function loadProject(p) {
+    localStorage.setItem('biblio_active_proj', p);
+    location.reload();
 }
 
 function saveData() {
@@ -140,7 +156,6 @@ function deleteRecord(i) {
     if(confirm("حذف؟")) { records.splice(i, 1); updateUI(); }
 }
 
-// تصدير قالب فارغ للاكسل
 function exportTemplate() {
     const template = [["subject","see","see_also","author","title","collab","edition","place","publisher","year","pages","series","orig_title","orig_author","org","count","affil","country"]];
     const ws = XLSX.utils.aoa_to_sheet(template);
@@ -159,29 +174,28 @@ function importFromExcel(e) {
     reader.readAsBinaryString(e.target.files[0]);
 }
 
-// القائمة الببليوغرافية (الرقم في اليسار كما في الصورة)
 function previewFullList() {
     let win = window.open('', '', 'width=850,height=700');
     let serial = 1;
-    let content = `<div dir="rtl" style="font-family:'Times New Roman'، serif; padding:40px; line-height:1.6;">`;
+    let content = `<div dir="rtl" style="font-family:'Times New Roman', serif; padding:1in; line-height:1.5; font-size:12pt;">`;
     records.forEach(r => {
         let isRef = (r.see || r.see_also);
         let num = isRef ? '' : `<span style="float:left;">(${serial++})</span>`;
-        content += `<div style="margin-bottom:12px; border-bottom:1px dotted #ccc; padding-bottom:5px;">
-            <strong>${r.subject}</strong><br>${formatEntry(r)} ${num}<div style="clear:both"></div>
+        content += `<div style="margin-bottom:15pt; text-align:justify;">
+            <strong>${r.subject}</strong><br>${formatEntry(r)} ${num}
+            <div style="clear:both"></div>
         </div>`;
     });
     content += `</div>`; win.document.write(content);
 }
 
-// الكشافات التحليلية (دمج الأرقام وتنسيق العمودين)
 function previewIndex(type) {
     let win = window.open('', '', 'width=850,height=700');
-    let content = `<div dir="rtl" style="font-family:'Times New Roman'، serif; padding:40px; line-height:1.4; column-count: 2; column-gap: 30px;">`;
+    let content = `<div dir="rtl" style="font-family:'Times New Roman', serif; padding:1in; line-height:1.3; font-size:12pt; column-count: 2; column-gap: 0.5in;">`;
     let indexMap = {}; let serial = 1;
     records.forEach(r => {
         if(!(r.see || r.see_also)) {
-            let key = r[type === 'orig_author' ? 'orig_author' : type === 'orig_title' ? 'orig_title' : type];
+            let key = r[type];
             if(key) {
                 if(!indexMap[key]) indexMap[key] = [];
                 indexMap[key].push(serial);
@@ -190,7 +204,7 @@ function previewIndex(type) {
         }
     });
     Object.keys(indexMap).sort((a,b)=>a.localeCompare(b,'ar')).forEach(key => {
-        content += `<div style="margin-bottom:6px; border-bottom:1px solid #f0f0f0;">
+        content += `<div style="margin-bottom:8pt; text-align:justify; border-bottom:0.5pt solid #eee;">
             ${key} <span style="float:left; font-weight:bold;">(${indexMap[key].join(')( ')})</span>
             <div style="clear:both"></div>
         </div>`;
@@ -207,7 +221,7 @@ document.querySelectorAll('.in').forEach((input, index, list) => {
         }
     });
 });
-window.onload = updateUI;
+window.onload = updateProjectList(); updateUI();
 </script>
 </body>
 </html>
